testdata/corset/invalid/purefun_invalid_10.lisp
;;error:3:14-15:symbol * already declared
;; Attempt to overload intrinsic.
(defpurefun (* x y) (* x y))
